Initializing Second File

--- a/scripts/penguins.ipynb
+++ b/scripts/penguins.ipynb
@@ -16,7 +16,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"hahhhhasdiufhali\")\n",
+    "print(\"hahhhhasdiufhaliuuehfasuhfdlaisudfghlaisudgfhas\")\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from palmerpenguins import load_penguins\n",
+    "\n",
+    "# Load the penguins data\n",
+    "penguins = load_penguins()\n",
+    "\n",
+    "# Create the scatter plot, grouping by species\n",
+    "sns.scatterplot(data=penguins, x='body_mass_g', y='flipper_length_mm', hue='species')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.title('Penguin Body Mass vs Flipper Length by Species')\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "\n"
